--- a/src/locales/vi-VN.json
+++ b/src/locales/vi-VN.json
@@ -19,7 +19,8 @@
           "alwaysOnTop": "Luôn trên cùng",
           "windowSize": "Kích thước",
           "windowRadius": "Độ bo tròn cửa sổ",
-          "opacity": "Độ mờ"
+          "opacity": "Độ mờ",
+          "autoReleaseDelay": "Độ trễ tự động nhả phím"
         },
         "hints": {
           "mirrorMode": "Bật để lật ngang mô hình.",
@@ -27,7 +28,8 @@
           "mouseMirror": "Khi bật, chuột của mô hình sẽ phản chiếu theo chuyển động chuột thực tế.",
           "passThrough": "Bật để cửa sổ không ảnh hưởng đến thao tác trên ứng dụng khác.",
           "alwaysOnTop": "Bật để cửa sổ luôn nằm trên ứng dụng khác.",
-          "windowSize": "Di chuyển chuột đến mép cửa sổ hoặc giữ Shift và kéo chuột phải để thay đổi kích thước."
+          "windowSize": "Di chuyển chuột đến mép cửa sổ hoặc giữ Shift và kéo chuột phải để thay đổi kích thước.",
+          "autoReleaseDelay": "Do Windows không bắt được sự kiện nhả của một số phím hệ thống, các phím đó sẽ được tự động xem như đã nhả sau khi hết thời gian chờ."
         }
       },
       "general": {
