--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -19,7 +19,8 @@
           "alwaysOnTop": "窗口置顶",
           "windowSize": "窗口尺寸",
           "windowRadius": "窗口圆角",
-          "opacity": "不透明度"
+          "opacity": "不透明度",
+          "autoReleaseDelay": "按键自动释放延迟"
         },
         "hints": {
           "mirrorMode": "启用后，模型将水平镜像翻转。",
@@ -27,7 +28,8 @@
           "mouseMirror": "启用后，鼠标将镜像跟随手部移动。",
           "passThrough": "启用后，窗口不影响对其他应用程序的操作。",
           "alwaysOnTop": "启用后，窗口始终显示在其他应用程序上方。",
-          "windowSize": "将鼠标移至窗口边缘，或按住 Shift 并右键拖动，也可以调整窗口大小。"
+          "windowSize": "将鼠标移至窗口边缘，或按住 Shift 并右键拖动，也可以调整窗口大小。",
+          "autoReleaseDelay": "由于 Windows 下部分系统级按键无法捕获释放事件，超时后将自动视为已释放。"
         }
       },
       "general": {
