--- a/src/locales/vi-VN.json
+++ b/src/locales/vi-VN.json
@@ -20,7 +20,8 @@
           "windowSize": "Kích thước",
           "windowRadius": "Độ bo tròn cửa sổ",
           "opacity": "Độ mờ",
-          "autoReleaseDelay": "Độ trễ tự động nhả phím"
+          "autoReleaseDelay": "Độ trễ tự động nhả phím",
+          "hideOnHover": "Ẩn khi di chuột"
         },
         "hints": {
           "mirrorMode": "Bật để lật ngang mô hình.",
@@ -29,7 +30,8 @@
           "passThrough": "Bật để cửa sổ không ảnh hưởng đến thao tác trên ứng dụng khác.",
           "alwaysOnTop": "Bật để cửa sổ luôn nằm trên ứng dụng khác.",
           "windowSize": "Di chuyển chuột đến mép cửa sổ hoặc giữ Shift và kéo chuột phải để thay đổi kích thước.",
-          "autoReleaseDelay": "Do Windows không bắt được sự kiện nhả của một số phím hệ thống, các phím đó sẽ được tự động xem như đã nhả sau khi hết thời gian chờ."
+          "autoReleaseDelay": "Do Windows không bắt được sự kiện nhả của một số phím hệ thống, các phím đó sẽ được tự động xem như đã nhả sau khi hết thời gian chờ.",
+          "hideOnHover": "Khi bật, cửa sổ sẽ ẩn khi chuột di chuyển vào."
         }
       },
       "general": {
