feat: 补全遗漏的国际化内容 (#742)

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -163,5 +163,12 @@
       "restartApp": "Restart",
       "quitApp": "Exit"
     }
+  },
+  "utils": {
+    "live2d": {
+      "errors": {
+        "notFoundMainConfig": "Main model config not found. Please ensure the model files are complete."
+      }
+    }
   }
 }
