--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -21,7 +21,8 @@
           "windowRadius": "Window Radius",
           "opacity": "Opacity",
           "autoReleaseDelay": "Auto Release Delay",
-          "hideOnHover": "Hide on Hover"
+          "hideOnHover": "Hide on Hover",
+          "position": "Window Position"
         },
         "hints": {
           "mirrorMode": "When enabled, the model will be mirrored horizontally.",
@@ -31,7 +32,14 @@
           "alwaysOnTop": "When enabled, the window stays above all other windows.",
           "windowSize": "Move mouse to window edge, or hold Shift and right-drag to resize.",
           "autoReleaseDelay": "On Windows, some system keys cannot capture release events and will auto-release after timeout.",
-          "hideOnHover": "When enabled, the window hides when mouse hovers over it."
+          "hideOnHover": "When enabled, the window hides when mouse hovers over it.",
+          "position": "Takes effect after the app starts, or when this parameter, window size, model, or screen resolution changes."
+        },
+        "options": {
+          "topLeft": "Top Left",
+          "topRight": "Top Right",
+          "bottomLeft": "Bottom Left",
+          "bottomRight": "Bottom Right"
         }
       },
       "general": {
