--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -21,7 +21,8 @@
           "windowRadius": "窗口圆角",
           "opacity": "不透明度",
           "autoReleaseDelay": "按键自动释放延迟",
-          "hideOnHover": "鼠标移入隐藏"
+          "hideOnHover": "鼠标移入隐藏",
+          "position": "窗口位置"
         },
         "hints": {
           "mirrorMode": "启用后，模型将水平镜像翻转。",
@@ -31,7 +32,14 @@
           "alwaysOnTop": "启用后，窗口始终显示在其他应用程序上方。",
           "windowSize": "将鼠标移至窗口边缘，或按住 Shift 并右键拖动，也可以调整窗口大小。",
           "autoReleaseDelay": "由于 Windows 下部分系统级按键无法捕获释放事件，超时后将自动视为已释放。",
-          "hideOnHover": "启用后，鼠标悬停在窗口上时，窗口会隐藏。"
+          "hideOnHover": "启用后，鼠标悬停在窗口上时，窗口会隐藏。",
+          "position": "应用启动后，或当此参数、窗口尺寸、模型、电脑分辨率发生变化时生效。"
+        },
+        "options": {
+          "topLeft": "左上角",
+          "topRight": "右上角",
+          "bottomLeft": "左下角",
+          "bottomRight": "右下角"
         }
       },
       "general": {
